<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_background">

    <ImageView
        android:layout_width="139.56dp"
        android:layout_height="99.13dp"
        android:id="@+id/top_left_illustration"
        android:contentDescription="@string/top_left_illustration"
        android:src="@drawable/top_left_illustration"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <ImageView
        android:layout_width="200.6dp"
        android:layout_height="264.93dp"
        android:id="@+id/top_right_illustration"
        android:contentDescription="@string/top_right_illustration"
        android:src="@drawable/top_right_illustration"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <ImageView
        android:layout_width="162dp"
        android:layout_height="38dp"
        android:id="@+id/logo_horizontal_white"
        android:contentDescription="@string/logo_horizontal_white"
        android:src="@drawable/logo_horizontal_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="181dp"
        android:layout_marginStart="56dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:contentDescription="@string/login"
        android:text="@string/login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="373dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:letterSpacing="0.01"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_text"
        android:contentDescription="@string/login_text"
        android:text="@string/login_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="430dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:letterSpacing="0.01"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_text_field"
        android:hint="@string/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="477dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>



    



</androidx.constraintlayout.widget.ConstraintLayout>