<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_background">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/top_left_illustration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/top_left_illustration"
                android:src="@drawable/ic_top_left_illustration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/top_right_illustration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/top_right_illustration"
                android:src="@drawable/ic_top_right_illustration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/logo_horizontal_white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/logo_horizontal_white"
                android:src="@drawable/ic_triangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_left_illustration"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="34sp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/logo_horizontal_white"
                app:layout_constraintEnd_toEndOf="@id/constraint_layout_login"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/logo_horizontal_white"
                app:layout_constraintTop_toTopOf="@id/logo_horizontal_white"/>

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/login"
                android:letterSpacing="0.01"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_right_illustration"/>

            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/login_text"
                android:letterSpacing="0.01"
                android:text="@string/login_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_field"
                style="@style/OutlinedTextInputLayoutWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_field"
                style="@style/OutlinedTextInputLayoutWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_text_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/remember_me_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/remember_me"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                app:layout_constraintBottom_toTopOf="@id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_text_field"
                app:layout_constraintVertical_bias="0.0"
                tools:checked="true"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/LoginButtons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/login_button"
                app:layout_constraintBottom_toTopOf="@id/register_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_text_field"
                app:layout_constraintVertical_bias="1.0"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#3d1d72"
                android:text="@string/register_button"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="normal"
                android:outlineSpotShadowColor="@color/transparent"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>