<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/write_a_review_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:text="@string/write_review"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/close_bottom_sheet_button"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintBottom_toBottomOf="@+id/write_a_review_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/write_a_review_text_view"
            />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/write_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/write_a_review_text_view"/>


            <!-- ZASTOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/review_text_input_layout"
            style="@style/OutlinedTextInputLayoutBoxBottomSheet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="32dp"
            android:hint="@string/comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/write_rating_bar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/review_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text|textMultiLine"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_review_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/submit"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/review_text_input_layout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>