<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowDetailsActivity">

    <ScrollView
        android:id="@+id/show_details_scroll_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/write_review_button_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="0dp"
                android:layout_height="116dp"
                android:background="@android:color/transparent"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
                app:elevation="0dp"
                app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:titleCollapseMode="fade"
                tools:title="@string/app_name">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/show_menu_image_card_view"
                android:layout_width="0dp"
                android:layout_height="340dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">

                <ImageView
                    android:id="@+id/show_menu_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_content_description"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar_layout"
                    tools:src="@drawable/ic_office"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/show_menu_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/show_menu_image_card_view"
                tools:text="@string/sample_text"/>

            <TextView
                android:id="@+id/reviews_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="20dp"
                android:text="@string/reviews"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_menu_description"
                app:layout_goneMarginTop="16dp"/>

            <TextView
                android:id="@+id/reviews_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviews_title"
                tools:text="3 REVIEWS, 3.67 AVERAGE"
                />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:scaleX=".7"
                android:scaleY=".7"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                android:isIndicator="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviews_text"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviews_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar"
                tools:listitem="@layout/item_review"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/write_review_button_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:contentPadding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/write_review_button"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/write_review"
            android:textAllCaps="true"
            android:textColor="@color/white"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>